# netserv

./: .gitignore  .gitmodules  .renovaterc.json  bgp-policy-labels.cue  cdk8s.yaml  cue.nix  deps.ts  flake.nix  main.ts  oci.nix  package-lock.json  package.json  publish_charts.sh  redis.ts  renovate.json  timoni.nix  versions.json
.gitea/workflows/: demo.yaml
.github/workflows/: demo.yaml  vendor-charts.yaml
apps/: common.cue  kustomization.cue  resources.cue  synth_tool.cue
apps/cert-manager/: cert-manager.cue
apps/cilium/: cilium.cue
apps/cue.mod/: module.cue
apps/external-secrets/: es.cue
apps/flux-components/: flux.cue
apps/flux-system/: resources.cue
apps/test/: resources.cue
cue-k8s-go/: go.mod  go.sum  main.go
cue.mod/: module.cue
files/: configuration.py  redis.conf  redis_init.sh  sentinel_init.sh
flux-system/: kustomization.cue
k8s/: common.cue  synth_tool.cue
k8s/attic/: attic.cue
k8s/cert-manager/: cert-manager.cue
k8s/cilium/: cilium.cue
main/: act-runner-config.yaml  cdk8s.yaml  flux.yaml  kustomization.yaml  main.ts  package-lock.json  package.json
mysqlclient/: Dockerfile
patches/: crdb-enable-affinity.patch  gitea-cockroach.patch
scripts/: build_chart_oci.sh  vendor_chart_crds.sh
src/alternator-credentials/: Cargo.toml
src/alternator-credentials/src/: main.rs
src/attic-token-service/: Cargo.toml  token.txt
src/attic-token-service/src/: authentication.rs  main.rs  model.rs  token.rs
talos/: base.cue  gen_tool.cue  m720q.cue  nodes.cue  rpi.cue
tools/: cue.nix  gerrit.nix  oci.nix  utils.nix
(+49 files in other folders)
