[package]
name = "alternator-credentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { version = "0.12", features = ["ssl"] }
#tokio = { version = "1.12", features = ["full"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
openssl = "0.10"
anyhow = "1.0"
base64 = "0.21"
clap = { version = "=4.4.18", features = ["derive"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
